--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 # Changelog
 
+## [0.2.0] - 2022-07-02
+
+### Changed
+- only update thread-bindings, in case there has something to be updated to avoid unnecessary requests
+- merged files for better structure
+- allow multiple core-ids when binding threads
+- use separate core-ids for processing-threads
+
+
 ## [0.1.1] - 2022-02-14
 
 ### Changed
